# mediscara.mcu

./: .env  .gitignore  LICENCE.md  readme.md  requirements.txt  setup.cfg
.github/workflows/: codeql.yml  sync-2-upstream.yml
docs/: ExampleConfig.md  docker-compose.yaml  dummy_embedded_device.py  tutorial.postman_collection.json
src/: main.py
src/mcu/: __init__.py  config.py  mcu.py  protocols.py
src/mcu/comm/: command.py  communication.py
src/mcu/connectors/: serial.py  serial_connection.py  tcp.py  tcp_connection.py
src/mcu/models/: command.py  mixins.py  user_defined.py
tests/: test_command.py  test_load.py  test_protocol.py  test_save.py  test_serial.py  test_tcp.py
