[metadata]
name = MCU
version = 0.0.1
author = Peter Puska
description = This package is used to model a Master Control Unit # TODO

[options]
packages = find:
packages_dir =
    = src
install_requires =
    flask
    pyserial
    coloredlogs
    python_dotenv
    requests
python_requires = >= 3.10.2

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest >= 7.1.2